--- a/07_practice/task_01_todo_list/src/index.scss
+++ b/07_practice/task_01_todo_list/src/index.scss
@@ -46,8 +46,7 @@ body {
 
   &_done {
     opacity: 0.7;
-
-    .list-item__text {
+    list .list-item__text {
       text-decoration: line-through;
     }
   }
